# onnxmodel-utils

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: build.yaml
src/onnxmodel_utils/: __init__.py  container.py  dtype.py  model.py  utils.py  version.py
src/onnxmodel_utils/transform/: base.py  decompose_sln.py  fuse_mulmatmul.py  merge_matmul.py
