[build-system]
requires = ["setuptools>=62.6", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "onnxmodel-utils"
description = "utils for working with onnx models"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.9"
dependencies = [
    "onnx-simplifier>=0.4.8",
    "onnxruntime>=1.12.1",
    "onnx>=1.12.0",
    "numpy>=1.21.2",
    "pandas>=1.3.3",
    "tqdm>=4.62.3",
]
dynamic = ["version"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "onnxmodel_utils.version.version"}

[tool.setuptools_scm]
write_to = "src/onnxmodel_utils/version.py"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[tools.black]
line-length = 100

[tool.isort]
profile = "black"

[tools.flake8]
max-line-length = 100